# zkpki

./: CLAUDE.md  Cargo.toml  HARDWARE_WHITELIST_GOVERNANCE.md  Pki guideline.txt  SECURITY.md  WINDOWS_TPM_EK_EXTRACTION.md
client/: Cargo.toml
client/src/: lib.rs
hip/: Cargo.toml
hip/src/: android.rs  lib.rs  tpm2.rs
hip/tests/: verifier_internal.rs
integrity/: Cargo.toml
integrity/src/: lib.rs
integrity/tests/: integrity_tests.rs
pallet/: Cargo.toml
pallet/src/: benchmarking.rs  lib.rs  weights.rs
primitives/: Cargo.toml
primitives/src/: bounds.rs  cert.rs  contract.rs  crypto.rs  ek.rs  eku.rs  hip.rs  issuer.rs  keys.rs  lib.rs  oids.rs  pop.rs  proxy.rs  runtime_api.rs  template.rs  tpm.rs  traits.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  proxy_validator.rs
runtime/tests/: cert_template.rs  cleanup_and_scheduling.rs  eku_enforcement.rs  hip_genesis.rs  mint_cert.rs  pop_assertion.rs  proxy_validation.rs  query_api.rs  red_team_regression.rs
tpm/: Cargo.toml
tpm/src/: chain.rs  lib.rs  parse.rs  verify.rs
tpm/tests/: amd_ftpm_chain_sanity.rs  binding_proof_fixture.rs  chain_verification.rs  parse_fixture.rs  payload_v3.rs  red_team_regression.rs  todo4_fixture_sanity.rs  windows_amd_hip_sanity.rs
tpm/tests/fixtures/: amd_ftpm_chain.rs  sm_g986u_attestation.rs  sm_g986u_binding_proof.rs  sm_g986u_todo4_ceremony.rs  windows_amd_hip_proof.rs
tpm2-hip-probe/: Cargo.toml
tpm2-hip-probe/src/: main.rs  tpm2_wire.rs  windows_impl.rs
