[package]
name = "zk-pki-primitives"
description = "Shared types, traits, and SCALE helpers for ZK-PKI. no_std compatible."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec          = { features = ["derive"], workspace = true }
scale-info     = { features = ["derive"], workspace = true }
frame-support  = { workspace = true }
sp-api         = { workspace = true }
sp-core        = { workspace = true }
sp-io          = { workspace = true }
sp-runtime     = { workspace = true }
sp-std         = { workspace = true }
serde          = { workspace = true, optional = true }

# P-521 ECDSA — device-bound cert keypairs.
# Audit caveat: EC arithmetic unaudited. Acceptable for Paseo testnet.
# Independent audit required before Kusama/mainnet submission.
p256           = { version = "0.13", default-features = false, features = ["ecdsa"] }
p521           = { version = "0.13", default-features = false, features = ["ecdsa"] }
ecdsa-core     = { package = "ecdsa", version = "0.16", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "scale-info/std",
    "sp-api/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde/std",
    "p256/std",
    "p521/std",
    "ecdsa-core/std",
]
