[package]
name = "zk-pki-tpm"
description = "TPM attestation parsing, EK extraction, and trust chain verification."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
codec           = { features = ["derive"], workspace = true }
scale-info      = { features = ["derive"], workspace = true }
sp-core         = { workspace = true }
sp-io           = { workspace = true }
sp-runtime      = { workspace = true }
sp-std          = { workspace = true }
zk-pki-primitives = { workspace = true }
zk-pki-integrity  = { workspace = true }

# Android Keystore attestation parsing (no_std compatible)
der             = { workspace = true }
x509-cert       = { workspace = true }
const-oid       = { workspace = true }
spki            = { workspace = true }

# Cert chain signature verification (ECDSA P-256, ECDSA P-384, RSA-PKCS1-SHA256)
p256            = { workspace = true }
p384            = { workspace = true }
rsa             = { workspace = true }
sha2            = { workspace = true }

[dev-dependencies]
# Test-only. The synthesized positive-case test for `verify_binding_proof`
# builds its own keypairs and cert chains and threads a test-specific root
# pin + manufacturer intermediate set through
# `verify_binding_proof_with_pins`. Real-hardware negative tests use
# captured SM-G986U fixture bytes and short-circuit before the integrity
# step, so they do NOT need these deps directly.
#
p256  = { workspace = true, features = ["std"] }
rcgen = { version = "0.12", default-features = false, features = ["pem", "ring"] }
frame-support = { workspace = true, features = ["std"] }
zk-pki-integrity = { path = "../integrity" }
zk-pki-hip      = { path = "../hip" }

[features]
default = ["std"]
# Test-only helpers — bypass-crypto verifier impls for pallet integration
# tests that need `mint_cert`'s Ok path without being blocked by the
# placeholder `DOTWAVE_SIGNING_CERT_HASH` constant. Never enable in a
# production build.
test-utils = []
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "zk-pki-primitives/std",
    "zk-pki-integrity/std",
    "der/std",
    "x509-cert/std",
    "const-oid/std",
    "spki/std",
    "p256/std",
    "p384/std",
    "rsa/std",
    "sha2/std",
]
